--- a/signup.css
+++ b/signup.css
@@ -2,7 +2,7 @@
 
 /* Sign up section with background image */
 .signup-banner {
-    background-image: url('https://th.bing.com/th/id/OIG4.N2i5YurE_JnQ9rtoDex2?w=1024&h=1024&rs=1&pid=ImgDetMain');
+    background-image: url('https://c4.wallpaperflare.com/wallpaper/25/81/104/digital-art-abstract-minimalism-black-wallpaper-preview.jpg');
     background-size: cover;
     background-position: center;
     padding: 20px;
