--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,7 @@ h1 {
 .subscribe-button {
     display: inline-block;
     padding: 15px 25px;
-    background-color: #34495e;
+    background-color: #000000;
     color: white;
     text-decoration: none;
     font-size: 1.2em;
@@ -105,7 +105,7 @@ h1 {
 }
 
 .subscribe-button:hover {
-    background-color: #2c3e50;
+    background-color: #181a1d;
 }
 
 footer {
