--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,7 @@ h1 {
 .subscribe-button {
     display: inline-block;
     padding: 15px 25px;
-    background-color: #34495e;
+    background-color: #000000;
     color: white;
     text-decoration: none;
     font-size: 1.2em;
@@ -105,7 +105,7 @@ h1 {
 }
 
 .subscribe-button:hover {
-    background-color: #2c3e50;
+    background-color: #525050;
 }
 
 footer {
@@ -137,8 +137,8 @@ footer {
 }
 
 .tag {
-    background-color: #f0f0f0; /* Light gray background */
-    color: #333; /* Dark text color */
+    background-color: #fcce00; /* Light gray background */
+    color: #ffffff; /* Dark text color */
     font-size: 0.9rem; /* Adjust font size */
     padding: 0.3rem 0.5rem; /* Internal padding */
     border-radius: 0.3rem; /* Rounded corners */
